--- a/4-portal/src/app/screens/login/login.component.html
+++ b/4-portal/src/app/screens/login/login.component.html
@@ -13,7 +13,7 @@
         <br><br>    
         <input type="button1" (click)="nav('register')" name="reg" id="reg" value="Register">
         <br><br>
-        <input type="button" (click)="login()" name="log" id="log" value="Log In Here">       
+        <input type="button1" (click)="login()" name="log" id="log" value="Log In Here">       
         <br><br>    
         <p>{{requestResult | json}}</p>
         <input type="checkbox" id="check">   
