--- a/4-portal/src/app/screens/register/register.component.html
+++ b/4-portal/src/app/screens/register/register.component.html
@@ -36,8 +36,8 @@
          
         <span>Remember me</span>    
         <br><br>     -->
-        <p>{{ error }}</p>
-        <p>{{egisterForm.value | json}}</p>
+        <!-- <p>{{ error }}</p>
+        <p>{{egisterForm.value | json}}</p> -->
         <p>{{egisterForm.status }}</p>
         <button type="submit" [disabled]="!egisterForm.valid" id="createAcc" (click)="register()">
           CREATE ACCOUNT
